# symbolrust

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  test.yml
symbolrust/: Cargo.toml
symbolrust/examples/: ndarray_magic.rs
symbolrust/src/: context.rs  function.rs  lib.rs  node.rs  utils.rs
symbolrust/src/ops/: constant.rs  exponential.rs  log.rs  mod.rs  negation.rs  power.rs  variable.rs
symbolrust/src/visitors/: constant_folder.rs  derivator.rs  evaluator.rs  mod.rs  pretty_printer.rs
symbolrust_cli/: Cargo.toml  grammar.pest
symbolrust_cli/src/: main.rs
symbolrust_core/: Cargo.toml
symbolrust_core/src/: function.rs  lib.rs  node.rs  utils.rs
symbolrust_core/src/ops/: addition.rs  constant.rs  exponential.rs  inverse.rs  log.rs  mod.rs  multiplication.rs  power.rs  variable.rs
symbolrust_core/src/visitors/: constant_folder.rs  derivator.rs  evaluator.rs  mod.rs  pretty_printer.rs
symbolrust_macros/: Cargo.toml
symbolrust_macros/src/: into_impl.rs  lib.rs  node.rs  operators.rs  precedence.rs  visitor_trait.rs
symbolrust_repl/: Cargo.toml  build.rs  grammar.lalrpop
symbolrust_repl/src/: main.rs
