[package]
name = "symbolrust_cli"
version = "0.1.0"
authors = ["Paul Lesur <git@lesurpaul.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symbolrust_core = { path = "../symbolrust_core" }
pest = "2.1.3"
pest_derive = "2.1.0"
lazy_static = "1.4.0"
