[package]
name = "symbolrust_core"
version = "0.1.0"
authors = ["Paul Lesur <git@lesurpaul.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
num-traits = "0.2.14"
symbolrust_macros = { path = "../symbolrust_macros" }