[package]
name = "symbolrust_repl"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
symbolrust = { path = "../symbolrust" }
lalrpop-util = { version = "0.20.2", features = ["lexer", "unicode"] }

[build-dependencies]
lalrpop = "0.20.2"
